--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,21 @@
+1.7.10-3.0.0
+
+! Update to Minecraft 1.7.10
+! Update to Clashsoft Lib 1.7.10-2.3.0
++ Added PotionAttributes
++ Added DummyPotionTypes
++ Added PotionTypeLists for easy modification
++ Added custom Potion Type display names
++ Tooltip colors are now configurable
++ Water is now a PotionBase
++ Standart operations are now PotionRecipes
+* Fixed some crashes
+* Fixed UpdateChecker not working
+* Improved Brewing Stand performance
+* Improved Brewing Stand shift-clicking
+* Changed creative brewing time from 3 to 4 seconds
+* Much Documentation
+
 1.7.2-2.0.1
 
 ! Update to Clashsoft Lib 1.7.2-2.2.0
