--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,11 @@
+1.7.10-3.0.2
+
+> Update to Clashsoft Lib 1.7.10-2.7.0.
++ Added interface for @Agadar's Brewing API.
++ Added CustomPotionRecipe.
++ Added logo.
+* Fixed UpdateChecker not working.
+
 1.7.10-3.0.1
 
 > Update to Forge 1.7.10-10.13.0.1207.
